syntax = "proto3";

package learnfs;
option go_package = "github.com/syhpoon/learnfs/proto";

import "google/protobuf/timestamp.proto";

service LearnFS {
    rpc CreateFile (CreateFileRequest) returns (CreateFileResponse);
    rpc Flush (FlushRequest) returns (FlushResponse);
    rpc GetAttr (GetAttrRequest) returns (GetAttrResponse);
    rpc SetAttr (SetAttrRequest) returns (SetAttrResponse);
    rpc Lookup (LookupRequest) returns (LookupResponse);
    rpc OpenDir (stream NextDirEntryRequest) returns (stream DirEntryResponse);
    rpc OpenFile (OpenFileRequest) returns (OpenFileResponse);
    rpc Read (ReadRequest) returns (ReadResponse);
    rpc RemoveFile (RemoveFileRequest) returns (RemoveFileResponse);
    rpc Write (WriteRequest) returns (WriteResponse);
}

// Inode attributes
message Attr {
    // Inode number
    uint32 ino = 1;
    // Size in bytes
    uint32 size = 2;
    // Size in blocks
    uint32 blocks = 3;
    // Access time
    google.protobuf.Timestamp atime = 4;
    // Modification time
    google.protobuf.Timestamp mtime = 5;
    // Status change time
    google.protobuf.Timestamp ctime = 6;
    // File mode
    uint32 mode = 7;
    /// Number of hard links
    uint32 nlink = 8;
    /// User id
    uint32 uid = 9;
    /// Group id
    uint32 gid = 10;
}

// RPC messages
message GetAttrRequest {
    uint32 inode = 1;
}

message GetAttrResponse {
    uint32 errno = 1;
    Attr attr = 2;
}

message SetAttrRequest {
    // Inode number
    uint32 inode = 1;

    // Access time
    google.protobuf.Timestamp atime = 2;

    // Modification time
    google.protobuf.Timestamp mtime = 3;

    // File mode
    uint32 mode = 5;
    bool mode_set = 6;

    /// User id
    uint32 uid = 7;
    bool uid_set = 8;

    /// Group id
    uint32 gid = 9;
    bool gid_set = 10;
}

message SetAttrResponse {
    uint32 errno = 1;
    Attr attr = 2;
}

message LookupRequest {
    uint32 inode = 1;
    string name = 2;
}

message LookupResponse {
    uint32 errno = 1;
    Attr attr = 2;
}

message NextDirEntryRequest {
    uint32 inode = 1;
}

message DirEntryResponse {
    message DirEntry {
        uint32 inode = 1;
        string name = 2;
        uint32 mode = 3;
    }

    uint32 errno = 1;
    DirEntry entry = 2;
}

message OpenFileRequest {
    uint32 inode = 1;
}

message OpenFileResponse {
    uint32 errno = 1;
}

message CreateFileRequest {
    uint32 dir_inode = 1;
    string name = 2;
    uint32 flags = 3;
    uint32 mode = 4;
    uint32 umask = 5;
    uint32 uid = 6;
    uint32 gid = 7;
}

message CreateFileResponse {
    uint32 errno = 1;
    Attr attr = 2;
}

message FlushRequest {
    uint32 inode = 1;
}

message FlushResponse {
    uint32 errno = 1;
}

message ReadRequest {
    uint32 inode = 1;
    int64 offset = 2;
    int32 size = 3;
}

message ReadResponse {
    uint32 errno = 1;
    bytes data = 2;
}

message RemoveFileRequest {
    uint32 dir_inode = 1;
    string name = 2;
}

message RemoveFileResponse {
    uint32 errno = 1;
}

message WriteRequest {
    uint32 inode = 1;
    int64 offset = 2;
    bytes data = 3;
}

message WriteResponse {
    uint32 errno = 1;
    int32 size = 2;
}
